--- a/assets/css/stylepanel.css
+++ b/assets/css/stylepanel.css
@@ -171,18 +171,17 @@ a.sidebar-link:hover {
     width: 40px;
 }
 
-.card-custom,.card-custom2, .card-custom3, .card-custom4 {
+ .card-custom,.card-custom2, .card-custom3, .card-custom4 {
     background-color: #ffffff;
     margin-bottom: 20px;
     border: 1px solid #ddd;
     border-radius: 10px 0px 0px 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease;
-}
+} 
 
 
-
-.card-custom:hover {
+ .card-custom:hover,.card-custom2:hover, .card-custom3:hover, .card-custom4:hover {
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
