--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -138,7 +138,7 @@ header ul li a:hover {
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(../img/landing/blanco.jpg);
+    background-image: url(../img/landing/gris.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -199,14 +199,14 @@ header ul li a:hover {
     position: relative;
     width: 100%;
     height: 100vh;
-    background-image: url(../img/landing/gris.jpg);
+    background-image: url(../img/landing/negro2.jpg);
     background-size: cover;
     background-position: center center;
 }
 
 
 .title-custom3{
-    color: #000000;
+    color: #fff;
     font-size: 72px;
     font-weight: bold;
     margin-bottom: 1rem;
@@ -215,7 +215,7 @@ header ul li a:hover {
 }
 
 .p-custom3{
-    color: #000000;
+    color: #ffffff;
     font-size: 24px;
     font-weight: 400;
     font-style: italic;
@@ -227,6 +227,8 @@ header ul li a:hover {
     width: 400px; /* Ancho de la tarjeta */
     height: 500px; /* Alto de la tarjeta */
     perspective: 1000px; /* Perspectiva para efecto 3D */
+
+    
   }
   
   .card-inner {
@@ -234,6 +236,7 @@ header ul li a:hover {
     height: 100%;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    
   }
   
   .card-giratoria:hover .card-inner {
@@ -268,3 +271,216 @@ header ul li a:hover {
     font-size: 14px;
     margin-top: 10px;
   }
+
+  .zona4{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/landing/gris.jpg);
+    background-size: cover;
+    background-position: center center;
+}
+
+.title-custom4{
+    color: #000000;
+    font-size: 72px;
+    font-weight: bold;
+    margin-bottom: 4rem;
+    margin-top: 7rem !important;
+    font-style: italic;
+}
+
+/*=============== GOOGLE FONTS ===============*/
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+/*=============== VARIABLES CSS ===============*/
+:root {
+  /*========== Colors ==========*/
+  /*Color mode HSL(hue, saturation, lightness)*/
+  --first-color: hsl(82, 60%, 28%);
+  --title-color: hsl(0, 0%, 15%);
+  --text-color: hsl(0, 0%, 35%);
+  --body-color: hsl(0, 0%, 95%);
+  --container-color: hsl(0, 0%, 100%);
+
+  /*========== Font and typography ==========*/
+  /*.5rem = 8px | 1rem = 16px ...*/
+  --body-font: "Poppins", sans-serif;
+  --h2-font-size: 1.25rem;
+  --small-font-size: .813rem;
+}
+
+/*========== Responsive typography ==========*/
+@media screen and (min-width: 1120px) {
+  :root {
+    --h2-font-size: 1.5rem;
+    --small-font-size: .875rem;
+  }
+}
+
+/*=============== BASE ===============*/
+
+/*=============== CARD ===============*/
+
+
+.card__container {
+  display: grid;
+  row-gap: 3.5rem;
+}
+
+.card__article {
+  position: relative;
+  overflow: hidden;
+}
+
+.card__img {
+  width: 100%;
+  border-radius: 1.5rem;
+}
+
+.card__data {
+  width: 150px;
+  background-color: var(--container-color);
+  padding: 1.5rem 2rem;
+  box-shadow: 0 8px 24px hsla(0, 0%, 0%, .15);
+  border-radius: 1rem;
+  position: absolute;
+  bottom: -9rem;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+  opacity: 0;
+  transition: opacity 1s 1s;
+}
+
+.card__description {
+  display: block;
+  font-size: var(--small-font-size);
+  margin-bottom: .25rem;
+}
+
+.card__title {
+  font-size: var(--h2-font-size);
+  font-weight: 500;
+  color: var(--title-color);
+  margin-bottom: 1rem;
+}
+
+
+
+.card__button:hover {
+  text-decoration: underline;
+}
+
+/* Naming animations in hover */
+.card__article:hover .card__data {
+  animation: show-data 1s forwards;
+  opacity: 1;
+  transition: opacity .3s;
+}
+
+.card__article:hover {
+  animation: remove-overflow 2s forwards;
+}
+
+.card__article:not(:hover) {
+  animation: show-overflow 2s forwards;
+}
+
+.card__article:not(:hover) .card__data {
+  animation: remove-data 1s forwards;
+}
+
+/* Card animation */
+@keyframes show-data {
+  50% {
+    transform: translateY(-10rem);
+  }
+  100% {
+    transform: translateY(-7rem);
+  }
+}
+
+@keyframes remove-overflow {
+  to {
+    overflow: initial;
+  }
+}
+
+@keyframes remove-data {
+  0% {
+    transform: translateY(-7rem);
+  }
+  50% {
+    transform: translateY(-10rem);
+  }
+  100% {
+    transform: translateY(.5rem);
+  }
+}
+
+@keyframes show-overflow {
+  0% {
+    overflow: initial;
+    pointer-events: none;
+  }
+  50% {
+    overflow: hidden;
+  }
+}
+
+/*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 340px) {
+  .container {
+    margin-inline: 1rem;
+  }
+
+  .card__data {
+    width: 250px;
+    padding: 1rem;
+  }
+}
+
+/* For medium devices */
+@media screen and (min-width: 768px) {
+  .card__container {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1.5rem;
+  }
+}
+
+/* For large devices */
+@media screen and (min-width: 1120px) {
+ 
+
+  .card__container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .card__img {
+    width: 425px;
+  }
+  .card__data {
+    width: 350px;
+    padding-inline: 2.5rem;
+  }
+}
+
+.button-custom2{
+    background-color: #000;
+    color: #fff;
+    border-color: #fff;
+    padding: 4px 12px;
+    border-radius: 16px;
+    font-size: 16px;
+    font-weight: bold;
+    transition: background-color 0.3s, color 0.3s;
+    text-decoration: none;
+    margin-top: 24px;
+}
+
+.button-custom2:hover {
+    background-color: #ff0000; /* Hacemos que el fondo sea transparente al pasar el cursor sobre el botón */
+    color: #fff; /* Mantenemos el color del texto */
+   
+}
