--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -633,3 +633,12 @@ summary:focus {
   right: 1rem;
   transition: all 150ms ease-out;
 }
+
+.zona5{
+  position: relative;
+  width: 100%;
+  height: 30vh;
+  background-image: url(../img/landing/gris.jpg);
+  background-size: cover;
+  background-position: center center;
+}
